# TheVault

./: .gitignore  Extract-comment-param.ipynb  HISTORY.txt  LICENSE  LICENSES.txt  README.md  _test.py  analysis_data_leak.py  crawl_data.py  docstring_analyser.py  execute.py  extract_params.py  install_env.sh  language_utils  main.py  merge_file.py  parser_processing.py  processing.py  processing_notebook.py  pyproject.toml  raw_preprocessing.py  requirements.txt
.github/workflows/: unittest.yml
CSN/: preprocess.py
data/: README.md
data/format/: README.md  codeparot-format.yaml  csn-format.yaml  raw-format.yaml  thestack.yaml
resources/: README.md  download_dataset.py
src/: README.md  deep-learning-filter.py  filter.sh  license_filter_singlelang.py  postprocesing.py  postprocessing.py  processing.py  split_data.py
src/analysis/: README.md  analyser.py  analyze_docstring_style.py  analyze_volumn.py  nb_analyser.ipynb  thevault_visualization.ipynb
src/codetext.egg-info/: PKG-INFO
src/preprocessing/: download_data.py
src/utils/: __init__.py  decorators.py  languages_function.py  license_filter.py  logger.py  make_report.py  noise_detection.py  utils.py
test/: test_clean_method.py
tests/: setup.py  test_c.py  test_cpp.py  test_csharp.py  test_go.py  test_java.py  test_javascript.py  test_php.py  test_python.py  test_ruby.py  test_rust.py
tests/test_sample/: README.md  c_sharp_test_sample.cs  c_test_sample.c  cpp_test_sample.cpp  go_test_sample.go  java_test_sample.java  (+5 more)
utils/: languages_function.py  noise_detection.py  tokenize.py  tree_utils.py
(+64 files in other folders)
